# CrossPlat_ChatServer

./: .gitignore  CmakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/include/socket/: IClientSocket.h  IClientSocketMaker.h  MacClientSocket.h  MacClientSocketMaker.h
client/src/socket/: MacClientSocket.cpp  MacClientSocketMaker.cpp
server/: CMakeLists.txt  main.cpp
server/include/activate/: ServerActivator.h
server/include/handler/: TestHandler.h
server/include/socket/: IServerSocket.hpp  ISocketMaker.h  MacServerSocket.hpp  MacSocketMaker.h  MacSocketServer.hpp  WinServerSocket.h  WinSocketMaker.h
server/include/util/: NumberUtil.h
server/src/: CMakeLists.txt
server/src/activate/: ServerActivator.cpp
server/src/handler/: TestHandler.cpp
server/src/socket/: MacServerSocket.cpp  MacSocketMaker.cpp  WinServerSocket.cpp  WinSocketMaker.cpp
server/src/socketutil/: windows.h
server/src/util/: NumberUtil.cpp
